-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0 RC1
-
None
-
Windows, Linux
-
7c1ee572770bdac445eb6a647b6a82a7dc2da407
Try the example qtbug37404qw.zip from QTBUG-37404 , or the example from QTBUG-32175 (option -qw) or https://codereview.qt-project.org/#change,74220 for Qt Creator.
It is not possible to focus a text edit , or use keyboard navigation for lists.
(Release branches of 16.5.2014).
- is required for
-
QTBUG-39093 Issues to be fixed for Qt 5.3.1
-
- Closed
-
| For Gerrit Dashboard: QTBUG-39033 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 85879,1 | Focus event fix for QQuickWidget | stable | qt/qtdeclarative | Status: MERGED | +2 | 0 |